tests/fail/comment_not_ended_before_program.tig
/* This is a comment that begins here...

let
    var s := "Hello, world!\n"
in
    print(s)
end
